# cppStuff

./: .gitignore  README.md  bools.cpp  classCast.cpp  colors.cpp  constPointer.cpp  delete.cpp  diag  diag.cpp  enter  enter.cpp  fork.cpp  funcPointers.cpp  hola.cpp  mapping.txt  mat.cpp  move.cpp  pointerandreference.cpp  pointers.cpp  prueba.cpp  queue.cpp  reflection.cpp  static  static.cpp  strFind.cpp  stringParameter.cpp  swap.cpp  tensor.cpp  threads.cpp  tok  tokenizer  tokenizer.cpp  tont.cpp  try.cpp  variableArgs.cpp  vector.cpp
c1417/: autoFunction.cpp  delete.cpp  emplace_args.cpp  shared_pointer.cpp  unique_pointer.cpp
classes/: charToFunc.cpp  clase.cpp  classes.cpp  constandnonconstmethod.cpp  copynswap.cpp  hierarchy.cpp  static  staticId.cpp
ejercicios/: 1_ej.cpp  3_ej.cpp  9_ej.cpp
ejercicios/9_ej/: TNode.hpp
fileBin/: CMakeLists.txt  main.cpp  readBin.hpp  writeBin.hpp
fileReader/: fichero.txt  file.cpp
fork/: child  child.cpp  childCode.cpp  cli  cliente.cpp  handler.cpp  padre.cpp  par  parent  parent.cpp  rustChild.rs  ser  servidor  servidor.cpp  string.cpp  tuto.cpp
fork/write_read/: childCode  childCode.cpp  handler  (+1 more)
gestVect/: CMakeLists.txt  main.cpp
mapChange/: main.cpp  map
parallel_filesystem/: main.cpp
pointers/: pFunc.cpp  pointerToSomething.cpp
sfml/: click.cpp
templates/: templates.cpp
tiles/: main.cpp  map
unique_ptr/: Foo.cpp  Foo.hpp  Makefile  Text.cpp  Text.hpp  main.cpp
vector/: array.cpp  fixArray.cpp  it.cpp  iterateVect.cpp  mapFromFile.cpp  print.cpp  sortVectorPair.cpp  vect.cpp  vector.cpp
(+2 files in other folders)
